# vl-hmm

./: .gitignore  dataset_creation.py  dataset_creation_brown.py  pyproject.toml  setup.py  toy_dataset.py  toy_dataset_brown.py  toy_dataset_brown_dropout_experiment.py
ext/: _hmmc.cpp  _hmmc_dropout.cpp
src/hmmlearn/: hmm.py  hmm_brown.py  hmm_brown_dropout_experiment.py  utils.py
